# note

./: .gitignore  README.md
docker/: README.md
install/: README.md
lang/.php/: README.md
lang/.python/: README.md
lang/.rust/: README.md
lang/js/flux/: index.js  package.json
lang/js/immtable/: index.js
lang/js/lodash/: index.js
lang/js:store/: flux.js  mobx.js  package.json  redux.js
lang/orm/: .env  Cargo.toml  README.md  docker-compose.yml
lang/orm/.rust/: diesel_delete.rs  diesel_publish.rs  diesel_show.rs  diesel_write.rs
lang/orm/.rust/src/: lib.rs
lang/run-commands/: .js  .py  .rs  README.md
lang/web/: Cargo.toml  README.md  Rocket.toml  docker-compose.yml  package.json
lang/web/.js/: koa-cluster.js  koa.js  micro.js
lang/web/.php/.laravel/resources/views/: hello.blade.php
lang/web/.php/.laravel/routes/: web.php
lang/web/.python/: _flask.py
lang/web/.python/templates/: site.html
lang/web/.rust/: iron.rs  rocket.rs
lang/web/.rust/.rocket/templates/: users.hbs
lang/web/.rust/.rocket/templates/layput/: base.hbs
