[package]
name = "web"
version = "0.0.0"

[dependencies]
env_logger = "0.4.2"
iron = "0.5.1"
mysql = "11.0.0"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
router = "0.5.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.logger]
git = "https://github.com/iron/logger.git"

[dependencies.rocket_contrib]
version = "0.2.6"
default-features = false
features = ["handlebars_templates"]

[[example]]
name = "iron"
path = ".rust/iron.rs"

[[example]]
name = "rocket"
path = ".rust/rocket.rs"
